--- a/start.css
+++ b/start.css
@@ -1,53 +1,314 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Oswald:wght@200..700&display=swap");
+
 body {
-  margin-left: 92px;
-  margin-right: 92px;
-  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  margin: 24px;
+}
+.hamburger {
+  display:none;
 }
 header {
+  height: 4rem;
+  font-family: "Oswald", sans-serif;
   display: flex;
   align-items: center;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  background-color: #b30623;
-  border-radius: 6px;
+  border-radius: 7px;
+  padding-left: 14px;
+  background-color: #B30623;
 }
-.headerimg {
+.bookingcontainer{
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+.lengthlanguagecontainer{
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
   margin-left: 20px;
 }
-a {
-  color: inherit;
-  text-decoration: none;
+.lengthcontainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-img {
-  max-width: 75%;
-  height: auto;
+.seatcontainer{
+  margin-top: 30px;
+  border: #B30623 solid;
+}
+.positioncontainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.lengthlanguagecontainer p {
+  font-weight: 100;
+}
+.bookingcontainer img{
+  border-radius: 7px;
+}
+header h2 {
+  display:none;
+}
+.textcontainer2 {
+  font-family: "Oswald", sans-serif;;
+  margin-left: 30px;
+}
+.textcontainer2 h2 {
+  font-size: xx-large;
+}
+.textcontainer2 h3 {
+  font-size: larger;
+  font-weight: 200;
+}
+.textcontainer2 h4 {
+  font-size: 12px;
+  font-size: large;
+  font-weight: 100;
+}
+.navlist,
+.navlist a {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  text-decoration: none;
+  color: white;
 }
 .navlist {
-  position: relative;
-  display: flex;
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  color: white;
-  padding-left: 720px;
-  margin-left: 1000;
-}
-.container {
-  position: relative;
-  text-align: left;
-}
-.imgtitle {
-  font-family: "Oswald", sans-serif;
-  color: white;
   position: absolute;
-  bottom: 34px;
-  left: 26px;
+  right: 2rem;
+  float: right;
+}
+.imgcontainer{
+  margin-top: 2rem;
+  display: flex;
+  position: relative;
+}
+.imgcontainer img {
+  max-width: 75%;
+}
+.imgtitle{
+  font-family: "Oswald", sans-serif;
+  color: white;
+  font-size: 30px;
+  position: absolute;
+  bottom: 5rem;
+  left: 2rem;
 }
 .imgcategory {
-  font-family: "Inter", sans-serif;
-  color: gray;
+  font-family: "Oswald", sans-serif;
+  color: white;
+  font-size: 30px;
   position: absolute;
-  bottom: 16px;
-  left: 26px;
+  bottom: 3rem;
+  left: 2rem;
+}
+
+.imgcontainer a {
+  font-family: "Oswald", sans-serif;
+  position: absolute;
+  font-size: 45px;
+  padding-left: 20px;
+  padding-right: 20px;
+  bottom: 1rem;
+  left: 2rem;
+  text-decoration: none;
+  border-radius: 7%;
+  border-color: #B30623;
+  background-color: #B30623;
+  color: white;
+}
+.sidepanel {
+  display: flex;
+  flex-direction: column;
+  background-color: #B30623;
+  border-radius: 7px;
+  margin-left: 2rem;
+  color: white;
+  padding: 1rem;
+  font-family: "Oswald", sans-serif;
+}
+.sidepanel img {
+  max-width: 65px;
+  max-height: 65px;
+  min-height: 65px;
+  object-fit:cover;
+}
+.sidepanelcontent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: black;
+  background-color: white;
+  border-radius: 7px;
+  margin-bottom: 2rem;
+}
+.categorycontainer{
+  color: gray;
+}
+.nowplayingcontainer{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+.nowplayingcontainer h2 {
+  font-family: "Oswald", sans-serif;
+}
+.nowplayingcontainer img {
+  max-width: 50rem;
+  max-height: 20rem;
+  border-radius: 7px;
+  padding-top: 2rem;
+}
+.nowplayingimgcontainer {
+  display: flex;
+  position: relative;
+}
+.nowplayingimgtitle {
+  font-family: "Oswald", sans-serif;
+  color: white;
+  font-size: larger;
+  position: absolute;
+  bottom: 4rem;
+  left: 2rem;
+}
+.nowplayingcategory{
+  font-family: "Oswald", sans-serif;
+  font-size: smaller;
+  color: white;
+  position: absolute;
+  bottom: 3rem;
+  right: 6rem;
+}
+.movetoend{
+  padding-left: 80%;
+}
+.mobilecontainer{
+  display: none;
+}
+
+@media(max-width: 390px) and (max-height: 844px){
+  body {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0;
+  }
+  header {
+    height: 4rem;
+    font-family: "Oswald", sans-serif;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 0;
+  }
+  .headerimg {
+    padding-left: 8rem;
+  }
+  header h2 {
+    display: contents;
+    color: white;
+  }
+  /* What to display and not during mobile view. */
+  header .navlist {
+    display: none;
+  }
+  .hamburger {
+    display: contents;
+  }
+    .mobilecontainer{
+    display: contents;
+  }
+    .sidepanel {
+    display: none;
+  }
+  .nowplayingcontainer{
+    display: none;
+  }
+  .imgcontainer img{
+    max-width: 355px;
+    max-height: 198px;
+    border-radius: 7px;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+  }
+  .imgtitle, .imgcategory, .imgcontainer a {
+    font-size: smaller;
+  }
+  .imgtitle{
+    bottom: 1.5rem;
+  }.imgcategory{
+    bottom: .5rem;
+  }
+  .imgcontainer a {
+    font-family: "Oswald", sans-serif;
+    bottom: 2.5rem;
+    right: 2rem;
+    left: auto;
+  }
+  .mobiletextholder{
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+  }
+  .stars{
+    color: yellow;
+    font-size: larger
+  }
+  .nowplayingmobile{
+    display: flex;
+    flex-direction: column;
+    font-size: smaller;
+    font-family: "Oswald", sans-serif;
+    background-color: #B30623;
+    color: black;
+  }
+  .nowplayingmobile h3{
+    padding-left: 1rem;
+    color: white;
+  }
+  .nowplayingimgcontainermobile{
+    display: flex;
+    flex: row;
+    background-color: white;
+    margin: 1rem;
+    border-radius: 7px;
+  }
+  .mobilecontainer img {
+    max-width: 91px;
+    max-height: 104px;
+    margin: 1rem;
+  }
+  .mobilecontainer a {
+    font-family: "Oswald", sans-serif;
+    font-size: 10px;
+    text-decoration: none;
+    border-radius: 7px;
+    background-color: #B30623;
+    color: white;
+    margin-bottom: 20px;
+  }
+  .mobilefooter{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-items:center;
+    justify-content: baseline;
+    margin-top: 8%;
+  }
+  .mobilefooter a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    width: 360px;
+    height: 50px;
+    font-family: "Oswald", sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    border-radius: 7px;
+    color: white;
+    background-color: #B30623;
+  }
 }
