Started on 3rd page, need to keep fixing stuff

--- a/start.css
+++ b/start.css
@@ -204,6 +204,9 @@ header {
   padding-left: 14px;
   background-color: #B30623;
 }
+.mobilefooter {
+  display: none;
+}
 .bookingcontainer{
   display: flex;
   flex-direction: row;
