--- a/booknow.css
+++ b/booknow.css
@@ -1,12 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Oswald:wght@200..700&display=swap");
 body {
-    display: flex;
-    flex-direction: column;
     font-family: "Oswald", sans-serif;
     margin: 24px;
     color: white;
-    font-family: "Oswald", sans-serif;
 }
 header {
   height: 4rem;
@@ -22,7 +19,7 @@ header {
   header h2 {
     display:none;
   }
-  .navlist,
+.navlist,
 .navlist a {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -41,28 +38,38 @@ header {
   border-radius: 7px;
   padding-left: 10px;
   padding: 5%;
+  margin: 2rem 10rem 0 ;
 }
-
-main {
-    padding-left: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    margin-top: 60px;
-    position: relative;
-    border-radius: 7px;
-  }
-main a {
-    text-decoration: none;
-    color: #B30623;
-    background-color: white;
-    padding: 10px;
-    border-radius: 7px;;
-    text-align: center;
+.bookingcontainer form {
+  border-radius: 7px;
+}
+.bookingcontainer a {
+  color: #B30623;
+  background-color: white;
+  text-align: center;
+  border-radius: 7px;
+}
+.bookingcontainer ul {
+  display: flex;
+  flex-direction: row;
+  
+}
+.bookingcontainer li {
+list-style: none;
+background-color: white;
+color: black  ;
+font-size: larger;
+border-radius: 2px;
+padding: 3px;
+margin: 0 5px 0 5px;
+}
+.bookingcontainer input {
+  width: 100%;
 }
 .seats {
   margin-bottom: 20px;
 }
+
 @media(max-width: 390px) and (max-height: 844px){
     body {
         display: flex;
@@ -86,5 +93,8 @@ main a {
       }
 header .navlist {
     display: none;
+  }
+  .bookingcontainer {
+    margin: 5% 0 0 0;
   }
 }
