--- a/start.css
+++ b/start.css
@@ -385,13 +385,13 @@ header h2 {
 .nowplayingimgcontainer {
   display: flex;
   position: relative;
-  background: rgb(2,0,36);
-background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,0.8813726174063375) 0%, rgba(0,212,255,0) 100%);
+  margin-right: 4rem;
   
 }
 .nowplayingimgcontainer img{
-  z-index: -1;
-  
+  background: rgb(2,0,36);
+  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,0.8813726174063375) 0%, rgba(0,212,255,0) 100%);
+
 }
 .nowplayingimgtitle {
   font-family: "Oswald", sans-serif;
@@ -506,6 +506,10 @@ background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,0.88137261740633
     background-color: white;
     margin: 1rem;
     border-radius: 7px;
+  }
+  .nowplayingimgcontainermobile a{ 
+    width: 64px;
+
   }
   .mobilecontainer img {
     max-width: 91px;
