--- a/start.css
+++ b/start.css
@@ -225,7 +225,6 @@ main{
   display: flex;
   flex-direction: row;
   justify-items: center;
-  margin-left: 20px;
 }
 .lengthcontainer{
   display: flex;
@@ -277,6 +276,8 @@ header h2 {
 .textcontainer2 {
   font-family: "Oswald", sans-serif;
   margin-left: 30px;
+  display: flex;
+  flex-direction: column;
 }
 .textcontainer2 h2 {
   font-size: xx-large;
@@ -577,5 +578,8 @@ header h2 {
   }
   .seatcontainer img{
     max-width: 350px;
+  }
+  .lengthcontainer img{
+    height: 20px;
   }
 }
